--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -146,6 +146,10 @@ if(todoApp)
     // todoApp js 
     script(src='../../assets/js/todo-app.js') 
 
+if(todoTaskApp)
+    // todoTaskApp js
+    script(src="../../assets/js/todo/todo.init.js") 
+
 if(customizer)
     // customizer js
     script(src="../../assets/js/customizer.js") 
