--- a/assets/pug/data/todo-app-data.pug
+++ b/assets/pug/data/todo-app-data.pug
@@ -7,34 +7,39 @@
         {
             title:"Weekly Bigbazar Shopping",
             subTitle:"Go Outside Picnic on Sunday",
+            status:"pending",
+            priority:"low",
         },
         {
             title:"Meeting with Advanced photographer ",
             subTitle:"meeting at office 5pm",
             checked: true,
+            status:"completed",
+            priority:"high",
         },
         {
             title:"Go Outside Picnic on Sunday",
             subTitle:"with friends 22 jun. 2022",
+            status:"inprogress",
+            priority:"medium",
         },
         {
             title:"Complete Assignment before deadline 5 Sept. 2022",
             subTitle:"complete geography assignments",
             checked:true,
+            status:"completed",
+            priority:"medium",
         }, 
         {
             title:"Meet old Friend to airport before he live city  to his home",
             subTitle:"long time after he meeting",
+            status:"pending",
+            priority:"low",
         },
     ] 
 
 -
     var TODO_SIDEBAR_DATA= [
-        //- {
-        //-     icon:"Message",
-        //-     title:"Index",
-        //-     subTitle:"(30)",
-        //- },
         {
             icon:"Document",
             title:"All Task",
