--- a/assets/pug/pages/unique/todo.pug
+++ b/assets/pug/pages/unique/todo.pug
@@ -22,6 +22,9 @@
 //- todoApp 
 -var todoApp = true;
 
+//-  chatApp
+-var chatApp=true;
+
 //- Breadcrumbs
 -var pageTitle="Todo";
 -var breadcrumb=['Todo'];
@@ -42,32 +45,23 @@ html(lang='en')
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
                     include ../../layout/sidebar/unique 
-                // Sidebar End 
+                // Sidebar End
 
                 // Page Body Start
                 div.page-body
                     div.grid.grid-cols-12.gap-card-gap.card
                         div.col-span-3(class="lg:col-span-12") 
-                            +todo-left-sidebar(TODO_SIDEBAR_DATA)
+                            div.left-sidebar-aside
+                                +todo-left-sidebar(TODO_SIDEBAR_DATA)
 
                         div.col-span-9(class="lg:col-span-12")
                             div.flex.flex-col.gap-2 
-                                h5.text-title.font-bold.mb-2 Todo List
-                                div
+                                div.flex.justify-between.items-center
+                                    h5.text-title.font-bold.mb-2 Todo List
+                                    div.left-sidebar-hide-logo-show(class="hidden lg:block") 
+                                        i(data-feather="filter" class="hidden w-5 h-5 cursor-pointer stroke-title left-sidebar-toggle-btn lg:block")
+                                div(class="overflow-auto max-h-[478px] custom-scroll")
                                     +todo-app-data(TODO_APP_DATA)
-                                    //- form.todo-form.hidden.theme-form.m-0.flex.flex-col.gap-3(action="javascript:void(0)")
-                                    //-     div
-                                    //-         input(class="dark:bg-mode-200" name="title" id="title" type='text' required placeholder='Enter your title.. ') 
-                                    //-     div
-                                    //-         textarea(placeholder="Enter your description.." name="description" row="4" id="address" class="p-[11px]").w-full.rounded-5.text-xs.text-content
-
-                                    //-     div.flex.items-center.gap-2
-                                    //-         button.btn.btn-outline.btn-primary.todo-form-close(class="3sm:flex-1 !w-auto" type="button") Close  
-                                    //-         button.btn.btn-primary.text-white.addTodo(class="3sm:flex-1 !w-auto" type="submit") Add  
-                                    //- button.btn.btn-primary.gap-1.add-todo-btn.flex.items-center.justify-center.py-1.text-white 
-                                    //-     i(data-feather="plus" class="w-5 h-5 stroke-current")   
-                                    //-     | Add New Task 
-
 
                 // Page Body End  
                 +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
@@ -76,22 +70,33 @@ html(lang='en')
             div.modal-main
                 input#todo-modal(class="peer" name="todo-modal" type='checkbox')
                 label.modal-overlay(class="peer-checked:block" for='todo-modal')
-                div.modal.modal-bottom-right(class="invisible w-11/12 max-w-xl transition-all duration-1000 translate-y-0 opacity-0 peer-checked:opacity-100 peer-checked:visible peer-checked:-translate-y-9 !right-[2%]")
-                    div.modal-body    
-                        form.todo-form.hidden.theme-form.m-0.flex.flex-col.gap-3(action="javascript:void(0)")
-                            div
-                                input(class="dark:bg-mode-200" name="title" id="title" type='text' required placeholder='Enter your title.. ') 
-                            div
-                                textarea(placeholder="Enter your description.." name="description" row="4" id="address" class="p-[11px]").w-full.rounded-5.text-xs.text-content
-
+                div.modal.modal-bottom-right(class="checkout-detail invisible w-11/12 max-w-xl transition-all duration-1000 translate-y-0 opacity-0 peer-checked:opacity-100 peer-checked:visible peer-checked:-translate-y-9 !right-[2%]")
+                    div.modal-header
+                        h3 Create Task
+                        label(for='todo-modal')
+                            i(data-feather="x" class='w-4 h-4 stroke-title')
+                    div.modal-body
+                        form.todo-form.theme-form.m-0.flex.flex-col.gap-3(action="javascript:void(0)")
+                            div   
+                                label(for="taskTitle") Title
+                                input(type="text" name="title" id="taskTitle" placeholder="Enter task name.." required)
+                            div.priority-list
+                                label(for='priority') Priority
+                                select#priority.priority-list-item.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' name="priority" aria-label='Default select example')
+                                    option(selected='') Normal
+                                    option(value='Low') Low
+                                    option(value='Medium') Medium
+                                    option(value='High') High
+                            div 
+                                label(for='status') Status
+                                select#status.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' name="status" aria-label='Default select example')
+                                    option(selected='') New
+                                    option(value='Inprogress') Inprogress
+                                    option(value='Completed') Completed
+                                    option(value='Pending') Pending
                             div.flex.items-center.gap-2
-                                button.btn.btn-outline.btn-primary.todo-form-close(class="3sm:flex-1 !w-auto" type="button") Close  
-                                button.btn.btn-primary.text-white.addTodo(class="3sm:flex-1 !w-auto" type="submit") Add  
-
-
-
-                            //- div.flex.items-center.gap-3
-                            //-     label(for="todo-modal").btn.btn-primary.py-2.px-4.text-white.uppercase Send
+                                label(for="todo-modal").btn.btn-outline.btn-primary.todo-form-close(class="3sm:flex-1 !w-auto !mt-4 !mb-0" type="button") Close  
+                                button.btn.btn-primary.text-white.addTodo(class="3sm:flex-1 !w-auto !mb-0" type="submit") Add  
 
 
 
