--- a/assets/pug/components/customizer.pug
+++ b/assets/pug/components/customizer.pug
@@ -59,9 +59,14 @@ div(class="bg-white customizer-sidebar")
                            img(class="w-[90px] object-cover" src='../../assets/images/customizer/icon-sidebar.png' alt='icon sidebar')  
             li
                div.flex.items-center.justify-between 
+                  span.text-sm.font-semobold.text-title Monochrome Mode
+                  label.inline-flex.relative.items-center.cursor-pointer
+                     input.sr-only.peer( name="monochrome" class="monochrome toggle toggle-primary" type='checkbox' id="monochrome")
+                     span.w-7.h-4.bg-content.rounded-full.peer(class="peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary")
 
-                  label.leading-none.text-dark(class="text-sm font-semibold" for="monochrome") Monochrome Mode
-                  input(id="monochrome" name="monochrome" class="monochrome toggle toggle-primary" type='checkbox') 
+
+                  //- label.leading-none.text-dark(class="text-sm font-semibold" for="monochrome") Monochrome Mode
+                  //- input(id="monochrome" name="monochrome" class="monochrome toggle toggle-primary" type='checkbox') 
    div(class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight") 
       button.btn.btn-ghost(class="flex-1 reset-customizer")
          | Reset  
