--- a/assets/pug/components/table/hoverable-table.pug
+++ b/assets/pug/components/table/hoverable-table.pug
@@ -11,8 +11,8 @@ table.table.equal-space.table-hover
         each bodyData,index in HOVERABLE_TABLE.body
             tr(class="hover:bg-primary-light hover:text-title")
                 td(class="min-w-[1.25rem]")=index+1
-                td(class="min-w-[11.125rem]")=bodyData.name
-                td(class="min-w-[11.125rem]")=bodyData.website
-                td(class="min-w-[11.125rem]")=bodyData.company
-                td(class="min-w-[.625rem]")=bodyData.birthday
+                td(class="min-w-[8.125rem]")=bodyData.name
+                td(class="min-w-[8.125rem]")=bodyData.website
+                td(class="min-w-[8.125rem]")=bodyData.company
+                td(class="min-w-[8.625rem]")=bodyData.birthday
 
